--- a/scrip-trad/src/app/pages/perfil/perfil.page.html
+++ b/scrip-trad/src/app/pages/perfil/perfil.page.html
@@ -19,7 +19,7 @@
         <img src="data:image/png;base64,{{usuarioAutenticado.img}}" id="imgCard">
     </ng-template>
     <ng-template #imgUsuario>
-        <img  src="assets/images/genericUser.jpg" id="imgCard">
+        <img  src="assets/img/genericUser.jpg" id="imgCard">
     </ng-template>
     </button>
   </div>
