--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.html
@@ -21,10 +21,11 @@
       <ion-item>
         <ion-label position="floating">Nombre nuevo proyecto</ion-label>
         <ion-input type="text" formControlName="nombreProyecto"></ion-input>
-        <ng-container *ngIf="newProjectForm.controls.nombreProyecto.errors != undefined">
-          <div class="errorEnValidacion" *ngIf="newProjectForm.controls.nombreProyecto.errors.required">Campo obligatorio
-          </div>
-        </ng-container>
+        <div>
+          <ng-container *ngIf="newProjectForm.get('nombreProyecto').hasError('required') && (newProjectForm.get('nombreProyecto').touched || newProjectForm.get('nombreProyecto').dirty)">
+            Campo obligatorio
+          </ng-container>
+        </div>
       </ion-item>
       </ion-col>
     </ion-row>
@@ -88,10 +89,11 @@
       <ion-item>
         <ion-label position="floating">Descripción</ion-label>
         <ion-input type="text" formControlName="descripcion" spellcheck="true" placeholder="Ej. Tercer capítulo de la cuarta temporada de la serie Bull"></ion-input>
-        <ng-container *ngIf="newProjectForm.controls.descripcion.errors != undefined">
-          <div class="errorEnValidacion" *ngIf="newProjectForm.controls.descripcion.errors.required">Campo obligatorio
-          </div>
-        </ng-container>
+        <div>
+          <ng-container *ngIf="newProjectForm.get('descripcion').hasError('required') && (newProjectForm.get('descripcion').touched || newProjectForm.get('descripcion').dirty)">
+            Campo obligatorio
+          </ng-container>
+        </div>
       </ion-item>
     </ion-col>
   </ion-row>
@@ -105,7 +107,7 @@
     <ion-col size="12">
       <ion-item>
         <ion-label>Texto original:</ion-label>
-        <input (change)="leoFicheroTexto()" type="file" id="textFile" accept=".txt">
+        <input (change)="leoFicheroTexto()" formControlName="texto" type="file" id="textFile" accept=".txt">
       </ion-item>
     </ion-col>
     <ion-col size="12">
@@ -114,13 +116,10 @@
         <input (change)="leoComentarios()" type="file" id="commFile" accept=".txt">
       </ion-item>
     </ion-col>
-    <!--<ion-col size="12">
-      <embed id="vistaPrevia" src=""  width="100%" height="450" type="application/pdf">
-    </ion-col>-->
 </ion-row>
 <ion-row>
   <ion-col size="12">    
-      <ion-button (click)="crearProyecto();" color="warning">Crear</ion-button>    
+      <ion-button color="success" expand="block" [disabled]="newProjectForm.invalid" (click)="crearProyecto();">Crear</ion-button>    
   </ion-col>
 </ion-row>
 
