--- a/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
+++ b/scrip-trad/src/app/pages/crear-proyecto/crear-proyecto.page.scss
@@ -6,7 +6,7 @@ ion-avatar {
 
 ion-badge {
     border-radius: 50%;
-    background-color: blueviolet;
+    background-color: #e0ac08;
     padding-right: 5px;
     margin-right: 20px;
     font-size: 0.7rem;
