--- a/scrip-trad/src/app/pages/login/login.page.html
+++ b/scrip-trad/src/app/pages/login/login.page.html
@@ -1,72 +1,102 @@
 <ion-header>
   <ion-toolbar>
-    <!--
-    <ion-thumbnail slot="start">
-      <ion-img [src]="assets/icon/favicon.png"></ion-img>
-    </ion-thumbnail>
-    <ion-row class="ion-align-items-center ion-justify-content-start">
-      <ion-col size-lg="1" ><ion-title>ScripTrad </ion-title></ion-col>
-      <ion-col size-lg="1" ><img src="../../../assets/icon/favicon.png" style="width:45px" /></ion-col>
-    </ion-row>-->
-    
-     <ion-title>ScripTrad </ion-title>
+    <ion-title>ScripTrad </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
-  <ion-card class="ion-justify-content-center"> <!--background-color: #EBECED;-->
-    <div class="ion-justify-content-center">
-     <!-- <img src="../../../assets/icon/favicon.png" style="width:5%" />-->
-    </div>
-    
-    <ion-card-header>
-      <ion-card-title text-center>
-        Login
-      </ion-card-title>
-    </ion-card-header>
-
-    <ion-card-content>
-      <form [formGroup]="loginForm">
-        <ion-item>
-          <ion-label position="floating">Usuario</ion-label>
-          <ion-input type="text" formControlName="usuario"></ion-input>
-          <div>
-            <ng-container *ngIf="loginForm.get('usuario').hasError('required') && (loginForm.get('usuario').touched || loginForm.get('usuario').dirty)">
-              Campo obligatorio
-            </ng-container>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center">
+      <ion-col size-lg="6">
+        <ion-card class="ion-justify-content-center">
+          <!--background-color: #EBECED;-->
+          <div class="ion-justify-content-center">
           </div>
-        </ion-item>
 
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input type="password" formControlName="pass"></ion-input>
-          <div>
-            <ng-container *ngIf="loginForm.get('pass').hasError('required') && (loginForm.get('pass').touched || loginForm.get('pass').dirty)">
-              Campo obligatorio
-            </ng-container>
-          </div>
-        </ion-item>
-      </form>
-      <!--Enlace a enviar email pass-->
-      <ion-item button (click)="passForgotten()" style="color: rgb(0, 60, 255); text-decoration: underline;">
-        <ion-label>¿Has olvidado tu contraseña?</ion-label>
-      </ion-item>
-      <!--Enlace a registro-->
-      <ion-item button (click)="irRegistro()" style="color: rgb(0, 60, 255); text-decoration: underline;">
-        <ion-label>Registrarme</ion-label>
-      </ion-item>
-      <!--Boton acceso-->
-      <ion-button [disabled]="waiting || loginForm.invalid" (click)="autenticaUsuario()" expand="block" color="light">Acceder <ion-spinner *ngIf="waiting"
-          ></ion-spinner>
-      </ion-button>
-      <!-- <ion-item-divider></ion-item-divider> -->
-      
-      
-      <!--Botones de inicio con Google y Facebook-->
-      <ion-button expand="block" color="tertiary" style="margin-top: 20px;"><ion-icon name="logo-facebook" style="padding-right: 5px;"></ion-icon>Continuar con Facebook</ion-button>
-      <ion-button expand="block" color="primary" style="margin-top: 10px;"><ion-icon name="logo-google" style="padding-right: 5px;"></ion-icon>Continuar con Google</ion-button>
-    </ion-card-content>
-  </ion-card>
+          <ion-card-header>
+            <ion-card-title text-center> Login </ion-card-title>
+          </ion-card-header>
 
+          <ion-card-content>
+            <form [formGroup]="loginForm">
+              <ion-item class="item-content">
+                <ion-label position="floating">Usuario</ion-label>
+                <ion-input type="text" formControlName="usuario"></ion-input>
+                <div>
+                  <ng-container
+                    *ngIf="loginForm.get('usuario').hasError('required') && (loginForm.get('usuario').touched || loginForm.get('usuario').dirty)"
+                  >
+                    Campo obligatorio
+                  </ng-container>
+                </div>
+              </ion-item>
+
+              <ion-item>
+                <ion-label position="floating">Contraseña</ion-label>
+                <ion-input
+                  [type]="isHidden ? 'password' : 'text'"
+                  formControlName="pass"
+                ></ion-input>
+                <ion-icon
+                  [name]="isHidden ? 'eye' : 'eye-off'"
+                  slot="end"
+                  (click)="isHidden = !isHidden"
+                  class="iconoOcultarPass"
+                ></ion-icon>
+
+                <div>
+                  <ng-container
+                    *ngIf="loginForm.get('pass').hasError('required') && (loginForm.get('pass').touched || loginForm.get('pass').dirty)"
+                  >
+                    Campo obligatorio
+                  </ng-container>
+                </div>
+              </ion-item>
+            </form>
+            <!--Enlace a enviar email pass-->
+            <ion-item
+              button
+              (click)="passForgotten()"
+              style="color: rgb(0, 60, 255); text-decoration: underline"
+            >
+              <ion-label>¿Has olvidado tu contraseña?</ion-label>
+            </ion-item>
+            <!--Enlace a registro-->
+            <ion-item
+              button
+              (click)="irRegistro()"
+              style="color: rgb(0, 60, 255); text-decoration: underline"
+            >
+              <ion-label>Registrarme</ion-label>
+            </ion-item>
+            <!--Boton acceso-->
+            <ion-button
+              [disabled]="waiting || loginForm.invalid"
+              (click)="autenticaUsuario()"
+              expand="block"
+              color="success"
+              >Acceder <ion-spinner *ngIf="waiting"></ion-spinner>
+            </ion-button>
+            <!-- <ion-item-divider></ion-item-divider> -->
+
+            <!--Botones de inicio con Google y Facebook-->
+            <ion-button expand="block" color="tertiary" style="margin-top: 20px"
+              ><ion-icon
+                name="logo-facebook"
+                style="padding-right: 5px"
+              ></ion-icon
+              >Continuar con Facebook</ion-button
+            >
+            <ion-button expand="block" color="primary" style="margin-top: 10px"
+              ><ion-icon
+                name="logo-google"
+                style="padding-right: 5px"
+              ></ion-icon
+              >Continuar con Google</ion-button
+            >
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
