--- a/scrip-trad/src/app/pages/login/login.page.scss
+++ b/scrip-trad/src/app/pages/login/login.page.scss
@@ -9,8 +9,8 @@
 }
 
 ion-toolbar {
-    --background: #dad3bcc7;//#c43e50;//#910719;
-    color: #801c2a;
+    --background: rgba(171, 137, 90, 0.837);//#c43e50;//#910719;
+    color: white//#801c2a;
 }
 
 ion-col {
@@ -34,7 +34,7 @@ ion-item {
 
 ion-grid {
     height: 95vh;
-    background-image: url('../../../assets/img/bgTranslator.jpg');
+    background-image: url('../../../assets/img/bgChicaRecortado.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
