cambio enlaces login, smaller and center

--- a/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
+++ b/scrip-trad/src/app/pages/listado-proyectos-traductor/listado-proyectos-traductor.page.scss
@@ -5,6 +5,11 @@ ion-avatar {
     
 }
 
+.cabecera {
+    --background: rgba(171, 137, 90, 0.837);//#c43e50;//#910719;
+    color: white//#801c2a;
+}
+
 ion-icon {
     cursor: pointer;
     font-size: 16px;
