cambio de contrasenna funciona

--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
@@ -14,19 +14,33 @@
       
     
       <form [formGroup]="passForm" *ngIf="this.passForm">
-          <!-- Nombre -->
+          <!-- Pass actual -->
           <ion-item>
             <ion-label position="floating">Contraseña actual</ion-label>
-            <ion-input type="text" formControlName="oldPass"></ion-input>
+            <ion-input type="password" formControlName="oldPass"></ion-input>
+            <div>
+              <ng-container
+                *ngIf="passForm.get('oldPass').hasError('required') && (passForm.get('oldPass').touched || passForm.get('oldPass').dirty)"
+              >
+                Campo obligatorio
+              </ng-container>
+            </div>
           </ion-item>
 
-          <!-- Usuario -->
+          <!-- Pass nueva -->
           <ion-item>
             <ion-label position="floating">Nueva contraseña</ion-label>
-            <ion-input type="text" formControlName="newPass"></ion-input>
+            <ion-input type="password" formControlName="newPass"></ion-input>
+            <div>
+              <ng-container
+                *ngIf="passForm.get('newPass').hasError('required') && (passForm.get('newPass').touched || passForm.get('newPass').dirty)"
+              >
+                Campo obligatorio
+              </ng-container>
+            </div>
           </ion-item>
           
-          <ion-button color="success" expand="block" [disabled]="passForm.invalid" (click)="editar();">Actualizar</ion-button>
+          <ion-button color="success" expand="block" [disabled]="passForm.invalid" (click)="update();">Cambiar contraseña</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
