--- a/scrip-trad/src/app/pages/login/login.page.scss
+++ b/scrip-trad/src/app/pages/login/login.page.scss
@@ -14,7 +14,8 @@
 }
 
 ion-toolbar {
-    --background: rgba(171, 137, 90, 0.837);//#c43e50;//#910719;
+    //--background: rgba(171, 137, 90, 0.837);//#c43e50;//#910719;
+    --background: #cc6b41;//#c43e50;//#910719;
     color: white//#801c2a;
 }
 
