arreglos style card lg y color

--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.html
@@ -3,66 +3,81 @@
     <ion-title>Contraseña</ion-title>
     <!--Imagen de usuario logueado-->
     <ion-avatar slot="end" id="usu" button (click)="mostrarMenu()">
-      <img src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}" alt="Imagen usuario">
+      <img
+        src="{{ usuarioAutenticado != null && usuarioAutenticado.img != null ? 'data:image/png;base64,' + usuarioAutenticado.img : 'assets/img/genericUser.jpg'}}"
+        alt="Imagen usuario"
+      />
     </ion-avatar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-card>
-    <ion-card-content>
-      
-    
-      <form [formGroup]="passForm" *ngIf="this.passForm">
-          <!-- Pass actual -->
-          <ion-item>
-            <ion-label position="floating">Contraseña actual</ion-label>
-            <ion-input type="password" formControlName="oldPass"></ion-input>
-            <div>
-              <ng-container
-                *ngIf="passForm.get('oldPass').hasError('required') && (passForm.get('oldPass').touched || passForm.get('oldPass').dirty)"
-              >
-                Campo obligatorio
-              </ng-container>
-            </div>
-          </ion-item>
+  <ion-grid>
+    <ion-row class="ion-justify-content-center ion-margin-top">
+      <ion-col size-lg="8">
+        <ion-card>
+          <img src="../../../assets/img/bgTabletCafe.png" id="imgCard"/>
+          <ion-card-content>
+            <form [formGroup]="passForm" *ngIf="this.passForm">
+              <!-- Pass actual -->
+              <ion-item>
+                <ion-label position="floating">Contraseña actual</ion-label>
+                <ion-input
+                  type="password"
+                  formControlName="oldPass"
+                ></ion-input>
+                <div>
+                  <ng-container
+                    *ngIf="passForm.get('oldPass').hasError('required') && (passForm.get('oldPass').touched || passForm.get('oldPass').dirty)"
+                  >
+                    Campo obligatorio
+                  </ng-container>
+                </div>
+              </ion-item>
 
-          <!-- Pass nueva -->
-          <ion-item>
-            <ion-label position="floating">Nueva contraseña</ion-label>
-            <ion-input type="password" formControlName="newPass"></ion-input>
-            <div>
-              <ng-container
-                *ngIf="passForm.get('newPass').hasError('required') && (passForm.get('newPass').touched || passForm.get('newPass').dirty)"
+              <!-- Pass nueva -->
+              <ion-item>
+                <ion-label position="floating">Nueva contraseña</ion-label>
+                <ion-input
+                  type="password"
+                  formControlName="newPass"
+                ></ion-input>
+                <div>
+                  <ng-container
+                    *ngIf="passForm.get('newPass').hasError('required') && (passForm.get('newPass').touched || passForm.get('newPass').dirty)"
+                  >
+                    Campo obligatorio
+                  </ng-container>
+                </div>
+              </ion-item>
+
+              <ion-button
+                
+                class="btnColor"
+                expand="block"
+                [disabled]="passForm.invalid"
+                (click)="update();"
+                >Cambiar</ion-button
               >
-                Campo obligatorio
-              </ng-container>
-            </div>
-          </ion-item>
-          
-          <ion-button color="success" expand="block" [disabled]="passForm.invalid" (click)="update();">Cambiar contraseña</ion-button>
-      </form>
-    </ion-card-content>
-  </ion-card>
+            </form>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 
 <!-- Footer-->
 <ion-footer>
-  <ion-toolbar >
+  <ion-toolbar>
     <!-- Gestor opciones -->
-    <ion-tabs >
+    <ion-tabs>
       <ion-tab-bar slot="bottom" class="ion-justify-content-around">
-        
-    
         <ion-tab-button (click)="irInicio();">
           <ion-icon name="home-outline"></ion-icon>
         </ion-tab-button>
-      
       </ion-tab-bar>
     </ion-tabs>
     <!-- Fin gestor opciones -->
-
-    
   </ion-toolbar>
-
 </ion-footer>
