--- a/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
+++ b/scrip-trad/src/app/pages/cambiar-password/cambiar-password.page.scss
@@ -8,3 +8,11 @@ ion-icon {
     cursor: pointer;
     font-size: 16px;
   }
+
+#imgCard {
+    max-height: 50%;
+}
+
+.btnColor {
+    --background: #cc6b41;
+}
