--- a/scrip-trad/src/app/pages/editor/editor.page.scss
+++ b/scrip-trad/src/app/pages/editor/editor.page.scss
@@ -38,4 +38,14 @@ ion-item-divider {
     padding-right: 3vw;
 }
 
+.btnColor {
+    --background: #cc6b41;
+}
+
+.iconoEnviar {
+    display: flex; 
+    justify-self: end;
+    color: #cc6b41;
+}
+
 
