--- a/scrip-trad/src/app/pages/perfil/perfil.page.html
+++ b/scrip-trad/src/app/pages/perfil/perfil.page.html
@@ -9,6 +9,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-grid>
+    <ion-row class="ion-justify-content-center ion-margin-top">
+      <ion-col size-lg="8">
   <ion-card>
     <ion-card-content>
       <div style="display: flex; justify-content:center;">
@@ -52,10 +55,13 @@
             <ion-input type="text" readonly disabled formControlName="tipoUsuario"></ion-input>
           </ion-item>
           
-          <ion-button color="success" expand="block" [disabled]="editForm.invalid" (click)="editar();">Guardar cambios</ion-button>
+          <ion-button class="btnColor" expand="block" [disabled]="editForm.invalid" (click)="editar();">Guardar cambios</ion-button>
       </form>
     </ion-card-content>
   </ion-card>
+</ion-col>
+</ion-row>
+</ion-grid>
 </ion-content>
 
 <!-- Footer-->
